--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <div id="logo">
       <a href="index.html">
-      <img id="title" src="img/title.png" alt="Designing Circuits">
+      <img id="title" src="img/title.PNG" alt="Designing Circuits">
       </a>
     </div>
 
