--- a/about/index.html
+++ b/about/index.html
@@ -20,9 +20,9 @@
     <div id="nav">
       <ul id="menu">
         <li><a href="../index.html">Home</a></li>
-        <li><a href="../circuits/index.html">Circuits</a></li>
-        <li><a href="../projects/index.html">Projects</a></li>
-        <li><a href="../resources/index.html">Resources</a></li>
+        <li><a href="../circuits">Circuits</a></li>
+        <li><a href="../projects">Projects</a></li>
+        <li><a href="../resources/">Resources</a></li>
         <li><a href="index.html">About</a></li>
       </ul>
     </div>
@@ -39,20 +39,40 @@
   </div>
 
   <div id="page">
-      <div id="content">
+
+          <h1> About </h1>
           <p>
-            Designing Circuits is a project dedicated to teaching the application of analog and digital circuits to those who are interested in electronics. I believe that the best method to learn about circuits is by experiencing them. The ability to design a circuit based solely on your knowledge and experience is fascinating. However, circuit design is not easy and involves a great deal of effort.
+            <img id="me" src="../img/me.png">
+            Designing Circuits is a project dedicated to
+            teaching the application of analog and digital circuits.
           </p>
           <p>
-            My vision for Designing Circuits is to create a guide that demonstrates various circuit applications for those who want to learn more. This site may be small right now, but with time, it will become the perfect resource for the aspiring circuit designer.
+            My name is Sergio Silva, and I attend the University of Illinois
+            at Urbana-Champaign, Class of 2018, where I study Electrical
+            Engineering. My passion lies in circuit design, mainly analog.
+            I have taken courses in analog/digital IC design, power electronics,
+            RF circuit design, and control systems. Here is a copy of
+            <a href="www.google.com">resume.</a>
           </p>
           <p>
-          <img class="pictype1" src="../img/meirl.jpg">
-           "Sergio Silva is currently a sophomore in Electrical Engineering at the University of Illinois at Urbana-Champaign. His passion lies in circuit design, mainly analog. His circuit background comes from the courses he has taken such as analog/digital IC design, power electronics, and wireless communication systems. In his sparetime, he often finds himself reading about and looking at different types of circuits. When he wants to take a break, he spends his time cruising the campus town streets on his longboard enjoying the air breeze."
+            With this website, I hope to improve my circuit design skills as
+            well as help others who wish to learn more about circuits. I post
+            articles and projects on my sparetime, but it becomes harder to do
+            so during the school semester. Each of the included projects on the
+            site are my own works, and they make for good projects that teach
+            you about that circuit. The articles are meant to give you the
+            background knowledge in order to understand the projects, but once
+            you know enough, you can also make your own project!
           </p>
-       </div>
-    <br/>
-    <br/>
+          <br/>
+          <p>
+            If you have any further questions or have feedback on how improve
+            the site, please contact <a>designingcircuits@gmail.com</a>
+          </p>
+          <p>
+            I would very be glad to read and to all respond to all comments.
+            Thank you for your interest.
+          </p>
 
     <!--
     <div id="footer">
@@ -61,10 +81,6 @@
     -->
 
   </div>
-
-
-
-
 
 </body>
 </html>
