--- a/about/index.html
+++ b/about/index.html
@@ -22,7 +22,7 @@
         <li><a href="../index.html">Home</a></li>
         <li><a href="../circuits">Circuits</a></li>
         <li><a href="../projects">Projects</a></li>
-        <li><a href="../resources/">Resources</a></li>
+        <li><a href="../resources">Resources</a></li>
         <li><a href="index.html">About</a></li>
       </ul>
     </div>
