--- a/projects/index.html
+++ b/projects/index.html
@@ -19,11 +19,11 @@
 
     <div id="nav">
       <ul id="menu">
-        <li><a href="../index.html">Home</a></li>
-        <li><a href="../circuits/index.html">Circuits</a></li>
-        <li><a href="index.html">Projects</a></li>
-        <li><a href="../resources/index.html">Resources</a></li>
-        <li><a href="../about/index.html">About</a></li>
+        <li><a href="..">Home</a></li>
+        <li><a href="../circuits">Circuits</a></li>
+        <li><a href="../projects">Projects</a></li>
+        <li><a href="../resources">Resources</a></li>
+        <li><a href="../about">About</a></li>
       </ul>
     </div>
 
