--- a/about/index.html
+++ b/about/index.html
@@ -42,7 +42,7 @@
 
           <h1> About </h1>
           <p>
-            <img id="me" src="../img/me.png">
+            <img id="me" src="../img/meirl.jpg">
             Designing Circuits is a project dedicated to
             teaching the application of analog and digital circuits.
           </p>
