--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div id="header">
 
     <div id="logo">
-      <a href="index.html">
+      <a href="css/..">
       <img id="title" src="img/title.PNG" alt="Designing Circuits">
       </a>
     </div>
