--- a/index.html
+++ b/index.html
@@ -39,14 +39,13 @@
   </div>
 
   <div id="page">
-      <div id="content">
+
       <p>
-        index
+        index2
       </p>
 
 
-      </div>
-
+      
 
 
   </div>
