--- a/about/index.html
+++ b/about/index.html
@@ -40,7 +40,7 @@
 
   <div id="page">
 
-          <h1> About </h1>
+          <h1>About</h1>
           <p>
             <img id="me" src="../img/meirl.jpg">
             Designing Circuits is a project dedicated to
@@ -51,7 +51,7 @@
             at Urbana-Champaign, Class of 2018, where I study Electrical
             Engineering. My passion lies in circuit design, mainly analog.
             I have taken courses in analog/digital IC design, power electronics,
-            RF circuit design, and control systems. Here is a copy of
+            RF circuit design, and control systems. Here is a copy of my
             <a href="www.google.com">resume.</a>
           </p>
           <p>
