--- a/index.html
+++ b/index.html
@@ -40,12 +40,17 @@
 
   <div id="page">
 
+      <h1>Welcome</h1>
       <p>
-        index2
+        This site is meant to serve as a guide for those who want to learn more
+        about circuit design and electronics. Assuming you know the basics,
+        such KVL, KCL, resistors, capacitors, and inductors, you should easily
+        be able to learn and follow the circuit articles and projects.
+      </p>
+      <p>
+        
       </p>
 
-
-      
 
 
   </div>
