--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <li><a href="projects">Projects</a></li>
         <li><a href="resources">Resources</a></li>
         <li><a href="about">About</a></li>
+        <li><a href="legal">Legal</a></li>
       </ul>
     </div>
 
@@ -47,9 +48,58 @@
         such KVL, KCL, resistors, capacitors, and inductors, you should easily
         be able to learn and follow the circuit articles and projects.
       </p>
-      <p>
-        
-      </p>
+    </br>
+    </br>
+
+      <div class="homenav">
+        <a href="circuits"><img class="homepics" src="img/homecircuit.png"></a>
+        <div>
+          <a href="circuits"><h2>Circuits</h2></a>
+          Learn how to design different types of circuits that use resistors,
+          capacitors, inductors, diodes, and transistors. Circuits, such as amplifiers,
+          power converters, oscillators, and more, are explained step-by-step
+          teaching their basic operation. Applications and relevance for each
+          circuit is discussed.
+        </div>
+      </div>
+
+    </br>
+    </br>
+    </br>
+    </br>
+
+      <div class="homenav">
+        <a href="projects"><img class="homepics" src="img/homeprojects.jpg"></a>
+        <div>
+          <a href="projects"><h2>Projects</h2></a>
+          Explore various projects that incoporate different circuit concepts.
+          Every project includes a BOM and step-by-step instructions that anyone can follow.
+          Simulation waveforms and bench-top measurements are included to verify
+          the performance of the circuit. The circuits are initially tested on a
+          bread-board, and then some are built on a perf-board or
+          designed on a PCB. Insight is given for the process of PCB design.
+          Each project is a great way to experience how real circuits perform.
+
+        </div>
+      </div>
+
+    </br>
+    </br>
+    </br>
+
+      <div class="homenav">
+        <a href="resources"><img class="homepics" src="img/homeresources.jpg"></a>
+        <div>
+          <a href="resources"><h2>Resources</h2></a>
+          Learn how to design different types of circuits that use resistors,
+          capacitors, inductors, diodes, and transistors. Circuits such as amplifiers,
+          power converters, oscillators, and more, are explained step-by-step
+          to teach their basic operation. Applications and relevance of each
+          circuit is discussed.
+        </div>
+      </div>
+
+
 
 
 
