--- a/projects/index.html
+++ b/projects/index.html
@@ -24,6 +24,7 @@
         <li><a href="../projects">Projects</a></li>
         <li><a href="../resources">Resources</a></li>
         <li><a href="../about">About</a></li>
+        <li><a href="../legal">Legal</a></li>
       </ul>
     </div>
 
