--- a/projects/index.html
+++ b/projects/index.html
@@ -12,7 +12,7 @@
   <div id="header">
 
     <div id="logo">
-      <a href="../index.html">
+      <a href="..">
       <img id="title" src="../img/title.PNG" alt="Designing Circuits">
       </a>
     </div>
@@ -39,45 +39,52 @@
 
   </div>
 
-  <div id="page">
-      <div id="content">
+  <div id="wrap">
+    <div id="page">
+        <div id="content">
 
-      projects page
+        projects page
 
-         <div class="row">
-           <div class="square">
-             1x1
-<img class="testpic" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/123941/placeimg01.jpg" alt="">
-           </div>
-           <div class="square">
-             2x1
-             <img class="testpic" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/123941/placeimg01.jpg" alt="">
+           <div class="row">
+             <div class="square">
+               1x1
+  <img class="testpic" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/123941/placeimg01.jpg" alt="">
              </div>
-           <div class="square">3x1
-             <img class="testpic" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/123941/placeimg01.jpg" alt="">
+             <div class="square">
+               2x1
+               <img class="testpic" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/123941/placeimg01.jpg" alt="">
+               </div>
+             <div class="square">3x1
+               <img class="testpic" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/123941/placeimg01.jpg" alt="">
 
+             </div>
            </div>
-         </div>
-         <div class="row">
-           <div class="square">2x1</div>
-           <div class="square">2x2</div>
-           <div class="square">2x3</div>
-         </div>
-         <div class="row">
-           <div class="square">3x1</div>
-           <div class="square">3x2</div>
-           <div class="square">3x3</div>
-         </div>
+           <div class="row">
+             <div class="square">2x1</div>
+             <div class="square">2x2</div>
+             <div class="square">2x3</div>
+           </div>
+           <div class="row">
+             <div class="square">3x1</div>
+             <div class="square">3x2</div>
+             <div class="square">3x3</div>
+           </div>
 
 
-      </div>
+        </div>
+    </div>
+  </div>
 
-      <!--
-      <div id="footer">
-
-      </div>
-    -->
-
+  <div id="footer">
+    <div class="footernav">
+    DesigningCircuits © 2016. All Rights Reserved. &nbsp; &nbsp; &nbsp; &nbsp;
+    <a class="footlink" href="..">Home</a>
+     | <a class="footlink" href="../circuits">Circuits</a>
+     | <a class="footlink" href="../projects">Projects</a>
+     | <a class="footlink" href="../resources">Resources</a>
+     | <a class="footlink" href="../about">About</a>
+     | <a class="footlink" href="../legal">Legal</a>
+    </div>
   </div>
 
 </body>
