--- a/404/index.html
+++ b/404/index.html
@@ -12,7 +12,7 @@
   <div id="header">
 
     <div id="logo">
-      <a href="..">
+      <a href="../index.html">
       <img id="title" src="../img/title.PNG" alt="Designing Circuits">
       </a>
     </div>
@@ -40,15 +40,11 @@
   </div>
 
   <div id="wrap">
-      <div id="page">
-          <div id="content">
+    <div id="page">
 
-          legal page
+        404 page
 
-
-          </div>
-
-      </div>
+    </div>
   </div>
 
   <div id="footer">
@@ -62,7 +58,6 @@
      | <a class="footlink" href="../legal">Legal</a>
     </div>
   </div>
-
 
 </body>
 </html>
