--- a/index.html
+++ b/index.html
@@ -39,70 +39,78 @@
 
   </div>
 
-  <div id="page">
+  <div id="wrap">
+          <div id="page">
 
-      <h1>Welcome</h1>
-      <p>
-        This site is meant to serve as a guide for those who want to learn more
-        about circuit design and electronics. Assuming you know the basics,
-        such KVL, KCL, resistors, capacitors, and inductors, you should easily
-        be able to learn and follow the circuit articles and projects.
-      </p>
-    </br>
-    </br>
+              <h1>Welcome</h1>
+              <p>
+                This site is meant to serve as a guide for those who want to learn more
+                about circuit design and electronics. Assuming you know the basics,
+                such KVL, KCL, resistors, capacitors, and inductors, you should easily
+                be able to learn and follow the circuit articles and projects.
+              </p>
+            </br>
 
-      <div class="homenav">
-        <a href="circuits"><img class="homepics" src="img/homecircuit.png"></a>
-        <div>
-          <a href="circuits"><h2>Circuits</h2></a>
-          Learn how to design different types of circuits that use resistors,
-          capacitors, inductors, diodes, and transistors. Circuits, such as amplifiers,
-          power converters, oscillators, and more, are explained step-by-step
-          teaching their basic operation. Applications and relevance for each
-          circuit is discussed.
-        </div>
+              <div class="homenav">
+                <a href="circuits"><img class="homepics" src="img/homecircuit.png"></a>
+                <div>
+                  <a href="circuits"><h2>Circuits</h2></a>
+                  Learn the design theory behind different types of circuits that use resistors,
+                  capacitors, inductors, diodes, and transistors. The basic operation
+                  behind circuits such as amplifiers, power converters, oscillators,
+                  and more, are explained. Calculated examples are given along with
+                  possible applications and considerations. Other relevant circuit topics
+                  are also included. Be sure to check out different articles as you may
+                  end up learning something you didn't before!
+                </div>
+              </div>
+
+            </br>
+            </br>
+            </br>
+
+              <div class="homenav">
+                <a href="projects"><img class="homepics" src="img/homeprojects.jpg"></a>
+                <div>
+                  <a href="projects"><h2>Projects</h2></a>
+                  Explore various projects that incoporate different circuit concepts.
+                  Every project includes a parts life and step-by-step instructions
+                  that anyone can follow.
+                  Simulation waveforms and bench-top measurements are included to verify
+                  the performance of the circuit. The circuits are initially tested on a
+                  bread-board, and then some are built on a perf-board or
+                  designed on a PCB. Insight is given for the process of PCB design.
+                  Each project is a great way to experience how real circuits perform.
+
+                </div>
+              </div>
+
+            </br>
+            </br>
+            </br>
+
+              <div class="homenav">
+                <a href="resources"><img class="homepics" src="img/homeresources.jpg"></a>
+                <div>
+                  <a href="resources"><h2>Resources</h2></a>
+                  Learn about the different resources avaible when it comes to circuits.
+                  Here i discuss what types of simulators to use and direct you to
+                  helpful 3rd party websites.
+                </div>
+              </div>
       </div>
+  </div>
 
-    </br>
-    </br>
-    </br>
-    </br>
-
-      <div class="homenav">
-        <a href="projects"><img class="homepics" src="img/homeprojects.jpg"></a>
-        <div>
-          <a href="projects"><h2>Projects</h2></a>
-          Explore various projects that incoporate different circuit concepts.
-          Every project includes a BOM and step-by-step instructions that anyone can follow.
-          Simulation waveforms and bench-top measurements are included to verify
-          the performance of the circuit. The circuits are initially tested on a
-          bread-board, and then some are built on a perf-board or
-          designed on a PCB. Insight is given for the process of PCB design.
-          Each project is a great way to experience how real circuits perform.
-
-        </div>
-      </div>
-
-    </br>
-    </br>
-    </br>
-
-      <div class="homenav">
-        <a href="resources"><img class="homepics" src="img/homeresources.jpg"></a>
-        <div>
-          <a href="resources"><h2>Resources</h2></a>
-          Learn how to design different types of circuits that use resistors,
-          capacitors, inductors, diodes, and transistors. Circuits such as amplifiers,
-          power converters, oscillators, and more, are explained step-by-step
-          to teach their basic operation. Applications and relevance of each
-          circuit is discussed.
-        </div>
-      </div>
-
-
-
-
-
+  <div id="footer">
+    <div class="footernav">
+    DesigningCircuits © 2016. All Rights Reserved. &nbsp; &nbsp; &nbsp; &nbsp;
+    <a class="footlink" href="css/..">Home</a>
+     | <a class="footlink" href="circuits">Circuits</a>
+     | <a class="footlink" href="projects">Projects</a>
+     | <a class="footlink" href="resources">Resources</a>
+     | <a class="footlink" href="about">About</a>
+     | <a class="footlink" href="legal">Legal</a>
+    </div>
   </div>
 
 
