--- a/resources/index.html
+++ b/resources/index.html
@@ -12,7 +12,7 @@
   <div id="header">
 
     <div id="logo">
-      <a href="../index.html">
+      <a href="..">
       <img id="title" src="../img/title.PNG" alt="Designing Circuits">
       </a>
     </div>
@@ -39,21 +39,31 @@
 
   </div>
 
-  <div id="page">
-      <div id="content">
 
-      resources page
+  <div id="wrap">
+    <div id="page">
+        <div id="content">
+
+        resources page
 
 
-      </div>
+        </div>
 
-      <!--
-      <div id="footer">
-
-      </div>
-    -->
-
+    </div>
   </div>
+
+  <div id="footer">
+    <div class="footernav">
+    DesigningCircuits © 2016. All Rights Reserved. &nbsp; &nbsp; &nbsp; &nbsp;
+    <a class="footlink" href="..">Home</a>
+     | <a class="footlink" href="../circuits">Circuits</a>
+     | <a class="footlink" href="../projects">Projects</a>
+     | <a class="footlink" href="../resources">Resources</a>
+     | <a class="footlink" href="../about">About</a>
+     | <a class="footlink" href="../legal">Legal</a>
+    </div>
+  </div>
+
 
 </body>
 </html>
