--- a/404.html
+++ b/404.html
@@ -1,3 +1,8 @@
+---
+permalink: /404.html
+
+---
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -19,12 +24,12 @@
 
     <div id="nav">
       <ul id="menu">
-        <li><a href="..">Home</a></li>
-        <li><a href="../circuits">Circuits</a></li>
-        <li><a href="../projects">Projects</a></li>
-        <li><a href="../resources">Resources</a></li>
-        <li><a href="../about">About</a></li>
-        <li><a href="../legal">Legal</a></li>
+        <li><a href="css/..">Home</a></li>
+        <li><a href="circuits">Circuits</a></li>
+        <li><a href="projects">Projects</a></li>
+        <li><a href="resources">Resources</a></li>
+        <li><a href="about">About</a></li>
+        <li><a href="legal">Legal</a></li>
       </ul>
     </div>
 
@@ -50,12 +55,12 @@
   <div id="footer">
     <div class="footernav">
     DesigningCircuits © 2016. All Rights Reserved. &nbsp; &nbsp; &nbsp; &nbsp;
-    <a class="footlink" href="..">Home</a>
-     | <a class="footlink" href="../circuits">Circuits</a>
-     | <a class="footlink" href="../projects">Projects</a>
-     | <a class="footlink" href="../resources">Resources</a>
-     | <a class="footlink" href="../about">About</a>
-     | <a class="footlink" href="../legal">Legal</a>
+    <a class="footlink" href="css/..">Home</a>
+     | <a class="footlink" href="circuits">Circuits</a>
+     | <a class="footlink" href="projects">Projects</a>
+     | <a class="footlink" href="resources">Resources</a>
+     | <a class="footlink" href="about">About</a>
+     | <a class="footlink" href="legal">Legal</a>
     </div>
   </div>
 
