--- a/404.html
+++ b/404.html
@@ -7,8 +7,8 @@ permalink: /404.html
 <html>
 <head>
 
-  <link rel="stylesheet" type="text/css" href="../css/main.css"/>
-  <link rel="stylesheet" type="text/css" href="../css/circuits/circuits.css"/>
+  <link rel="stylesheet" type="text/css" href="css/main.css"/>
+
 
 </head>
 
@@ -17,8 +17,8 @@ permalink: /404.html
   <div id="header">
 
     <div id="logo">
-      <a href="../index.html">
-      <img id="title" src="../img/title.PNG" alt="Designing Circuits">
+      <a href="css/..">
+      <img id="title" src="img/title.PNG" alt="Designing Circuits">
       </a>
     </div>
 
@@ -47,7 +47,8 @@ permalink: /404.html
   <div id="wrap">
     <div id="page">
 
-        404 page
+        <h1>Oops!</h1>
+        <h2>Looks like there was a short circuit</h2>
 
     </div>
   </div>
