--- a/404.html
+++ b/404.html
@@ -7,7 +7,8 @@ permalink: /404.html
 <head>
 
   <link rel="stylesheet" type="text/css" href="css/main.css"/>
-
+  <link rel="stylesheet" type="text/css" href="../css/main.css"/>
+  
 </head>
 
 <body>
