--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@ permalink: /404.html
 <html>
 <head>
 
-  <link rel="stylesheet" type="text/css" href="css/main.css"/>
+  <link rel="stylesheet" type="text/css" href="/path/to/css/main.css"/>
 
 </head>
 
