--- a/about/index.html
+++ b/about/index.html
@@ -2,8 +2,7 @@
 <html>
 <head>
 
-  <link rel="stylesheet" type="text/css" href="../css/main.css"/>
-  <link rel="stylesheet" type="text/css" href="../css/about/about.css"/>
+  <link rel="stylesheet" type="text/css" href="/css/main.css"/>
 
 </head>
 
