--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@ permalink: /404.html
 <html>
 <head>
 
-  <link rel="stylesheet" type="text/css" href="/path/to/css/main.css"/>
+  <link rel="stylesheet" type="text/css" href="/css/main.css"/>
 
 </head>
 
@@ -22,12 +22,12 @@ permalink: /404.html
 
     <div id="nav">
       <ul id="menu">
-        <li><a href="css/..">Home</a></li>
-        <li><a href="circuits">Circuits</a></li>
-        <li><a href="projects">Projects</a></li>
-        <li><a href="resources">Resources</a></li>
-        <li><a href="about">About</a></li>
-        <li><a href="legal">Legal</a></li>
+        <li><a href="/css/..">Home</a></li>
+        <li><a href="/circuits">Circuits</a></li>
+        <li><a href="/projects">Projects</a></li>
+        <li><a href="/resources">Resources</a></li>
+        <li><a href="/about">About</a></li>
+        <li><a href="/legal">Legal</a></li>
       </ul>
     </div>
 
@@ -54,12 +54,12 @@ permalink: /404.html
   <div id="footer">
     <div class="footernav">
     DesigningCircuits © 2016. All Rights Reserved. &nbsp; &nbsp; &nbsp; &nbsp;
-    <a class="footlink" href="css/..">Home</a>
-     | <a class="footlink" href="circuits">Circuits</a>
-     | <a class="footlink" href="projects">Projects</a>
-     | <a class="footlink" href="resources">Resources</a>
-     | <a class="footlink" href="about">About</a>
-     | <a class="footlink" href="legal">Legal</a>
+    <a class="footlink" href="/css/..">Home</a>
+     | <a class="footlink" href="/circuits">Circuits</a>
+     | <a class="footlink" href="/projects">Projects</a>
+     | <a class="footlink" href="/resources">Resources</a>
+     | <a class="footlink" href="/about">About</a>
+     | <a class="footlink" href="/legal">Legal</a>
     </div>
   </div>
 
