--- a/404.html
+++ b/404.html
@@ -15,8 +15,8 @@ permalink: /404.html
   <div id="header">
 
     <div id="logo">
-      <a href="css/..">
-      <img id="title" src="img/title.PNG" alt="Designing Circuits">
+      <a href="/css/..">
+      <img id="title" src="/img/title.PNG" alt="Designing Circuits">
       </a>
     </div>
 
