--- a/404.html
+++ b/404.html
@@ -48,6 +48,8 @@ permalink: /404.html
         <h1>Oops!</h1>
         <h2>Looks like there was a short circuit</h2>
 
+        <img id="pic404" src="/img/404.png">
+
     </div>
   </div>
 
