--- a/404.html
+++ b/404.html
@@ -45,8 +45,8 @@ permalink: /404.html
   <div id="wrap">
     <div id="page">
 
-        <h1>Oops, looks like there was a short circuit!</h1>
-        </br>
+        <h1>Oops,</h1>
+        <h2>Looks like there was a short circuit!</h2>
         </br>
         </br>
         <img id="pic404" src="/img/404.png">
