--- a/projects/index.html
+++ b/projects/index.html
@@ -3,7 +3,6 @@
 <head>
 
   <link rel="stylesheet" type="text/css" href="../css/main.css"/>
-  <link rel="stylesheet" type="text/css" href="../css/projects/projects.css"/>
 
 </head>
 
@@ -24,7 +23,7 @@
         <li><a href="../projects">Projects</a></li>
         <li><a href="../resources">Resources</a></li>
         <li><a href="../about">About</a></li>
-        <li><a href="../legal">Legal</a></li>
+        <li><a href="../terms">Terms</a></li>
       </ul>
     </div>
 
@@ -83,7 +82,7 @@
      | <a class="footlink" href="../projects">Projects</a>
      | <a class="footlink" href="../resources">Resources</a>
      | <a class="footlink" href="../about">About</a>
-     | <a class="footlink" href="../legal">Legal</a>
+     | <a class="footlink" href="../terms">Terms</a>
     </div>
   </div>
 
