--- a/terms/index.html
+++ b/terms/index.html
@@ -45,7 +45,7 @@
         <p>
           Welcome to DesigningCircuits. If you continue to browse and use this website,
           you are agreeing to comply with and be bound by the following terms
-          and conditions of use, which together with our privacy policy govern
+          and conditions of use, which governs
           DesigningCircuits's relationship with you in relation to this website.
           The term 'DesigningCircuits' or 'us' or 'we' refers to the owner of
           the website. The term 'you' refers to the user or viewer of our website.
@@ -136,7 +136,7 @@
           technical issues beyond our control.
         </p>
 
-        <h2>Copyright</h2>
+        <h2>Copyright Notice</h2>
         <p>
           This website and its content is copyright of DesigningCircuits - ©
           DesigningCircuits 2016. All rights reserved.
