--- a/terms/index.html
+++ b/terms/index.html
@@ -87,7 +87,7 @@
               property of, or licensed to the operator, are acknowledged on the website.
             </li>
             <li>
-              Unauthorised use of this website may give rise to a claim for
+              Unauthorized use of this website may give rise to a claim for
               damages and/or be a criminal offence.
             </li>
             <li>
@@ -117,10 +117,10 @@
           strictly at your own risk.
         </p>
         <p>
-         In no event will we be liable for any loss or damage including without
-         limitation, indirect or consequential loss or damage, or any loss or
-         damage whatsoever arising from loss of data or profits arising out of,
-         or in connection with, the use of this website.
+          In no event will we be liable for any loss or damage including without
+          limitation, indirect or consequential loss or damage, or any loss or
+          damage whatsoever arising from loss of data or profits arising out of,
+          or in connection with, the use of this website.
         </p>
         <p>
           Through this website you are able to link to other websites which are
