--- a/404.html
+++ b/404.html
@@ -27,7 +27,7 @@ permalink: /404.html
         <li><a href="/projects">Projects</a></li>
         <li><a href="/resources">Resources</a></li>
         <li><a href="/about">About</a></li>
-        <li><a href="/legal">Legal</a></li>
+        <li><a href="/terms">Terms</a></li>
       </ul>
     </div>
 
@@ -62,7 +62,7 @@ permalink: /404.html
      | <a class="footlink" href="/projects">Projects</a>
      | <a class="footlink" href="/resources">Resources</a>
      | <a class="footlink" href="/about">About</a>
-     | <a class="footlink" href="/legal">Legal</a>
+     | <a class="footlink" href="/terms">Terms</a>
     </div>
   </div>
 
