--- a/index.html
+++ b/index.html
@@ -41,34 +41,33 @@
   <div id="wrap">
     <div id="page">
         <h1>Welcome</h1>
-        <p>This site is meant to serve as a guide for those who want to learn more
+        <p class="extra">
+          This site is meant to serve as a guide for those who want to learn more
           about circuit design and electronics. Assuming you know the basics,
           such KVL, KCL, resistors, capacitors, and inductors, you should easily
-          be able to learn and follow the circuit articles and projects.</p>
-        </br>
+          be able to learn and follow the circuit articles and projects.
+        </p>
+
 
         <div class="homenav">
           <a href="circuits"><img class="homepics" src="img/homecircuit.png"></a>
-          <div>
-            <a href="circuits"><h2>Circuits</h2></a>
-            <p> Learn the design theory behind different types of circuits that use resistors,
+          <a href="circuits"><h2>Circuits</h2></a>
+          <p>
+            Learn the design theory behind different types of circuits that use resistors,
             capacitors, inductors, diodes, and transistors. The basic operation
             behind circuits such as amplifiers, power converters, oscillators,
             and more, are explained. Calculated examples are given along with
             possible applications and considerations. Other relevant circuit topics
             are also included. Be sure to check out different articles as you may
-            end up learning something you didn't before! </p>
-          </div>
+            end up learning something you didn't before!
+          </p>
         </div>
 
-      </br>
-      </br>
-      </br>
 
         <div class="homenav">
           <a href="projects"><img class="homepics" src="img/homeprojects.jpg"></a>
-          <div>
-            <a href="projects"><h2>Projects</h2></a>
+          <a href="projects"><h2>Projects</h2></a>
+          <p>
             Explore various projects that incoporate different circuit concepts.
             Every project includes a parts life and step-by-step instructions
             that anyone can follow.
@@ -77,23 +76,19 @@
             bread-board, and then some are built on a perf-board or
             designed on a PCB. Insight is given for the process of PCB design.
             Each project is a great way to experience how real circuits perform.
-
-          </div>
+          </p>
         </div>
-
-      </br>
-      </br>
-      </br>
 
         <div class="homenav">
           <a href="resources"><img class="homepics" src="img/homeresources.jpg"></a>
-          <div>
-            <a href="resources"><h2>Resources</h2></a>
+          <a href="resources"><h2>Resources</h2></a>
+          <p>
             Learn about the different resources avaible when it comes to circuits.
             Here i discuss what types of simulators to use and direct you to
             helpful 3rd party websites.
-          </div>
+          </p>
         </div>
+
     </div>
   </div>
 
