--- a/about/index.html
+++ b/about/index.html
@@ -71,7 +71,7 @@
               the site, please contact <a>designingcircuits@gmail.com</a>
             </p>
             <p>
-              I would very be glad to read and to all respond to all comments.
+              I would very be glad to read and to respond to all comments.
               Thank you for your interest.
             </p>
     </div>
