--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 
         <div class="homenav">
-          
+          <a href="circuits"><img class="homepics" src="img/homecircuit.png"></a>
           <a href="circuits"><h2>Circuits</h2></a>
           <p>
             Learn the design theory behind different types of circuits that use resistors,
