--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         </div>
 
         <div class="homenav">
-          <a href="resources"><img class="homepics" src="img/homeresource.JPG"></a>
+          <a href="resources"><img class="homepics" src="img/homeresources.JPG"></a>
           <a href="resources"><h2>Resources</h2></a>
           <p>
             Learn about the different resources avaible when it comes to circuits.
