--- a/circuits/index.html
+++ b/circuits/index.html
@@ -40,7 +40,15 @@
 
   <div id="wrap">
     <div id="page">
-        circuits page
+        <h1>Circuits</h1>
+        <ul id="menucircuits">
+          <li><a href="buck">Buck Converter</a></li>
+          <li><a href="boost">Boost Converter</a></li>
+          <li><a href="classa">Class A Amplifier</a></li>
+          <li><a href="resources">Resources</a></li>
+          <li><a href="about">About</a></li>
+          <li><a href="terms">Terms</a></li>
+        </ul>
     </div>
   </div>
 
