--- a/circuits/index.html
+++ b/circuits/index.html
@@ -44,6 +44,12 @@
         <ul id="menucircuits">
           <li><a href="buck">Buck Converter</a></li>
           <li><a href="boost">Boost Converter</a></li>
+          <li><a href="buckboost">Buck-Boost Converter</a></li>
+          <li><a href="opamp">Basic OpAmp</a></li>
+          <li><a href="filters">Passive and Active Filters</a></li>
+          <li><a href="realcapacitor">Real Capacitors</a></li>
+          <li><a href="realinductor">Real Inductors</a></li>
+          <li><a href="filters">Passive and Active Filters</a></li>
           <li><a href="classa">Class A Amplifier</a></li>
           <li><a href="resources">Resources</a></li>
           <li><a href="about">About</a></li>
