--- a/circuits/index.html
+++ b/circuits/index.html
@@ -49,11 +49,10 @@
           <li><a href="filters">Passive and Active Filters</a></li>
           <li><a href="realcapacitor">Real Capacitors</a></li>
           <li><a href="realinductor">Real Inductors</a></li>
-          <li><a href="filters">Passive and Active Filters</a></li>
+          <li><a href="mosfet">Basic MOSFET</a></li>
+          <li><a href="bjt">Basic Bipolar Junction Transistor</a></li>
+          <li><a href="smallsignal">Small Signal Model</a></li>
           <li><a href="classa">Class A Amplifier</a></li>
-          <li><a href="resources">Resources</a></li>
-          <li><a href="about">About</a></li>
-          <li><a href="terms">Terms</a></li>
         </ul>
     </div>
   </div>
