--- a/projects/index.html
+++ b/projects/index.html
@@ -41,7 +41,7 @@
   <div id="wrap">
     <div id="page">
         <div id="content">
-
+          <h1>Header</h1>
         <p>projects page</p>
 
            <div class="row">
