--- a/404.html
+++ b/404.html
@@ -6,7 +6,8 @@ permalink: /404.html
 <html>
 <head>
 
-  <link rel="stylesheet" type="text/css" href="/css/main.css"/>
+  <link rel="stylesheet" type="text/css" href="/css/header.css"/>
+  <link rel="stylesheet" type="text/css" href="/css/page.css"/>
 
 </head>
 
