--- a/projects/index.html
+++ b/projects/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 
-  <link rel="stylesheet" type="text/css" href="../css/main.css"/>
+  <link rel="stylesheet" type="text/css" href="../css/header.css"/>
+  <link rel="stylesheet" type="text/css" href="../css/page.css"/>
 
 </head>
 
