--- a/resources/index.html
+++ b/resources/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 
-  <link rel="stylesheet" type="text/css" href="../css/main.css"/>
+  <link rel="stylesheet" type="text/css" href="../css/header.css"/>
+  <link rel="stylesheet" type="text/css" href="../css/page.css"/>
 
 </head>
 
@@ -47,7 +48,6 @@
         With this website, I hope to improve my circuit design skills as well as help others who wish to learn more about circuits. I post articles and projects on my sparetime, but it becomes harder to do so during the school semester. Each of the included projects on the site are my own works, and they make for good projects that teach you about that circuit. The articles are meant to give you the background knowledge in order to understand the projects, but once you know enough, you can also make your own project!
         With this website, I hope to improve my circuit design skills as well as help others who wish to learn more about circuits. I post articles and projects on my sparetime, but it becomes harder to do so during the school semester. Each of the included projects on the site are my own works, and they make for good projects that teach you about that circuit. The articles are meant to give you the background knowledge in order to understand the projects, but once you know enough, you can also make your own project!
         With this website, I hope to improve my circuit design skills as well as help others who wish to learn more about circuits. I post articles and projects on my sparetime, but it becomes harder to do so during the school semester. Each of the included projects on the site are my own works, and they make for good projects that teach you about that circuit. The articles are meant to give you the background knowledge in order to understand the projects, but once you know enough, you can also make your own project!
-
     </div>
   </div>
 
