--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <img id="title" src="img/title.PNG" alt="Designing Circuits">
   <ul id="menu">
-    <li><a href="css/..">Home</a></li>
+    <li><a class="active" href="css/..">Home</a></li>
     <li><a href="circuits">Circuits</a></li>
     <li><a href="projects">Projects</a></li>
     <li><a href="resources">Resources</a></li>
