--- a/index.html
+++ b/index.html
@@ -16,5 +16,22 @@
     <li><a href="terms">Terms</a></li>
   </ul>
 
+  <div id="wrap">
+    <div id="page">
+    </div>
+  </div>
+
+  <div id="footer">
+    <div class="footernav">
+    DesigningCircuits © 2016. All Rights Reserved.
+    <a class="footlink" href="css/..">Home</a>
+     | <a class="footlink" href="circuits">Circuits</a>
+     | <a class="footlink" href="projects">Projects</a>
+     | <a class="footlink" href="resources">Resources</a>
+     | <a class="footlink" href="about">About</a>
+     | <a class="footlink" href="terms">Terms</a>
+    </div>
+  </div>
+
 </body>
 </html>
