--- a/index.html
+++ b/index.html
@@ -1,24 +1,38 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" type="text/css" href="css/test.css"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="css/test.css"/>
 </head>
+
 <body>
-
-  <img id="title" src="img/title.PNG" alt="Designing Circuits">
-  <ul id="menu">
-    <li><a class="active" href="css/..">Home</a></li>
-    <li><a href="circuits">Circuits</a></li>
-    <li><a href="projects">Projects</a></li>
-    <li><a href="resources">Resources</a></li>
-    <li><a href="about">About</a></li>
-    <li><a href="terms">Terms</a></li>
-  </ul>
-
   <div id="wrap">
-    <div id="page">
-      hello world
+
+    <img id="title" src="img/title.PNG" alt="Designing Circuits">
+    <ul id="menu">
+      <li><a class="active" href="css/..">Home</a></li>
+      <li><a href="circuits">Circuits</a></li>
+      <li><a href="projects">Projects</a></li>
+      <li><a href="resources">Resources</a></li>
+      <li><a href="about">About</a></li>
+      <li><a href="terms">Terms</a></li>
+    </ul>
+
+    <p>hello</p>
+
+    <div id="push"></div>
+  </div>
+
+  <div id="footer">
+    <div class="footernav">
+      DesigningCircuits © 2016. All Rights Reserved. &nbsp; &nbsp; &nbsp; &nbsp;
+      <a class="footlink" href="css/..">Home</a>
+       | <a class="footlink" href="circuits">Circuits</a>
+       | <a class="footlink" href="projects">Projects</a>
+       | <a class="footlink" href="resources">Resources</a>
+       | <a class="footlink" href="about">About</a>
+       | <a class="footlink" href="terms">Terms</a>
     </div>
   </div>
 
