--- a/index.html
+++ b/index.html
@@ -26,13 +26,15 @@
 
   <div id="footer">
     <div class="footernav">
-      DesigningCircuits © 2016. All Rights Reserved. &nbsp; &nbsp; &nbsp; &nbsp;
+      <div>DesigningCircuits © 2016. All Rights Reserved.</div>
+      <div>
       <a class="footlink" href="css/..">Home</a>
        | <a class="footlink" href="circuits">Circuits</a>
        | <a class="footlink" href="projects">Projects</a>
        | <a class="footlink" href="resources">Resources</a>
        | <a class="footlink" href="about">About</a>
        | <a class="footlink" href="terms">Terms</a>
+     </div>
     </div>
   </div>
 
