--- a/index.html
+++ b/index.html
@@ -9,17 +9,27 @@
 <body>
   <div id="wrap">
 
-    <img id="title" src="img/title.PNG" alt="Designing Circuits">
-    <ul id="menu">
-      <li><a class="active" href="css/..">Home</a></li>
-      <li><a href="circuits">Circuits</a></li>
-      <li><a href="projects">Projects</a></li>
-      <li><a href="resources">Resources</a></li>
-      <li><a href="about">About</a></li>
-      <li><a href="terms">Terms</a></li>
-    </ul>
+    <div id="header">
+      <img id="title" src="img/title.PNG" alt="Designing Circuits">
+      <ul id="menu">
+        <li><a class="active" href="css/..">Home</a></li>
+        <li><a href="circuits">Circuits</a></li>
+        <li><a href="projects">Projects</a></li>
+        <li><a href="resources">Resources</a></li>
+        <li><a href="about">About</a></li>
+        <li><a href="terms">Terms</a></li>
+      </ul>
+    </div>
 
-    <p>hello</p>
+    <div id="page">
+      <h1>Welcome</h1>
+      <p>
+        This site is meant to serve as a guide for those who want to learn more
+        about circuit design and electronics. Assuming you know the basics,
+        such KVL, KCL, resistors, capacitors, and inductors, you should easily
+        be able to learn and follow the circuit articles and projects.
+      </p>
+    </div>
 
     <div id="push"></div>
   </div>
@@ -28,12 +38,12 @@
     <div class="footernav">
       <div>DesigningCircuits © 2016. All Rights Reserved.</div>
       <div>
-      <a class="footlink" href="css/..">Home</a>
-       | <a class="footlink" href="circuits">Circuits</a>
-       | <a class="footlink" href="projects">Projects</a>
-       | <a class="footlink" href="resources">Resources</a>
-       | <a class="footlink" href="about">About</a>
-       | <a class="footlink" href="terms">Terms</a>
+        <a class="footlink" href="css/..">Home</a>
+         | <a class="footlink" href="circuits">Circuits</a>
+         | <a class="footlink" href="projects">Projects</a>
+         | <a class="footlink" href="resources">Resources</a>
+         | <a class="footlink" href="about">About</a>
+         | <a class="footlink" href="terms">Terms</a>
      </div>
     </div>
   </div>
