--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
     <div class="footernav">
       <div>DesigningCircuits © 2016. All Rights Reserved.</div>
       <div>
-        <a class="footlink" href="css/..">Home</a>
-         | <a class="footlink" href="circuits">Circuits</a>
-         | <a class="footlink" href="projects">Projects</a>
-         | <a class="footlink" href="resources">Resources</a>
-         | <a class="footlink" href="about">About</a>
-         | <a class="footlink" href="terms">Terms</a>
-     </div>
+        <a href="css/..">Home</a> |
+        <a href="circuits">Circuits</a> |
+        <a href="projects">Projects</a> |
+        <a href="resources">Resources</a> |
+        <a href="about">About</a> |
+        <a href="terms">Terms</a>
+      </div>
     </div>
   </div>
 
