--- a/index.html
+++ b/index.html
@@ -29,22 +29,33 @@
         such KVL, KCL, resistors, capacitors, and inductors, you should easily
         be able to learn and follow the circuit articles and projects.
       </p>
+
+      <h2>Circuits</h2>
+      <a href="circuits"><img class="homepics" src="img/homecircuit.png"></a>
+      <p>
+        Learn the design theory behind different types of circuits that use resistors,
+        capacitors, inductors, diodes, and transistors. The basic operation
+        behind circuits such as amplifiers, power converters, oscillators,
+        and more, are explained. Calculated examples are given along with
+        possible applications and considerations. Other relevant circuit topics
+        are also included. Be sure to check out different articles as you may
+        end up learning something you didn't before!
+      </p>
+
     </div>
 
     <div id="push"></div>
   </div>
 
   <div id="footer">
-    <div class="footernav">
-      <div>DesigningCircuits © 2016. All Rights Reserved.</div>
-      <div>
-        <a href="css/..">Home</a> |
-        <a href="circuits">Circuits</a> |
-        <a href="projects">Projects</a> |
-        <a href="resources">Resources</a> |
-        <a href="about">About</a> |
-        <a href="terms">Terms</a>
-      </div>
+    <div>DesigningCircuits © 2016. All Rights Reserved.</div>
+    <div>
+      <a href="css/..">Home</a> |
+      <a href="circuits">Circuits</a> |
+      <a href="projects">Projects</a> |
+      <a href="resources">Resources</a> |
+      <a href="about">About</a> |
+      <a href="terms">Terms</a>
     </div>
   </div>
 
