--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   <div id="wrap">
 
     <div id="header">
-      <img id="title" src="img/title.PNG" alt="Designing Circuits">
+      <div id="logo">
+        <a href="css/.."><img id="title" src="img/title.PNG" alt="Designing Circuits"></a>
+      </div>
       <ul id="menu">
         <li><a class="active" href="css/..">Home</a></li>
         <li><a href="circuits">Circuits</a></li>
@@ -31,7 +33,9 @@
       </p>
 
       <h2>Circuits</h2>
-      <a href="circuits"><img class="homepics" src="img/homecircuit.png"></a>
+      <div class="homepics">
+        <a href="circuits"><img src="img/homecircuit.png"></a>
+      </div>
       <p>
         Learn the design theory behind different types of circuits that use resistors,
         capacitors, inductors, diodes, and transistors. The basic operation
