--- a/index.html
+++ b/index.html
@@ -32,19 +32,60 @@
         be able to learn and follow the circuit articles and projects.
       </p>
 
-      <h2>Circuits</h2>
-      <div class="homepics">
-        <a href="circuits"><img src="img/homecircuit.png"></a>
+      <div class="homenav">
+        <h2>Circuits</h2>
+        <div class="picH">
+          <a href="circuits"><img class="homepics" src="img/homecircuit.png"></a>
+        </div>
+
+        <div>
+          <p>
+            Learn the design theory behind different types of circuits that use resistors,
+            capacitors, inductors, diodes, and transistors. The basic operation
+            behind circuits such as amplifiers, power converters, oscillators,
+            and more, are explained. Calculated examples are given along with
+            possible applications and considerations. Other relevant circuit topics
+            are also included. Be sure to check out different articles as you may
+            end up learning something you didn't before!
+          </p>
+        </div>
       </div>
-      <p>
-        Learn the design theory behind different types of circuits that use resistors,
-        capacitors, inductors, diodes, and transistors. The basic operation
-        behind circuits such as amplifiers, power converters, oscillators,
-        and more, are explained. Calculated examples are given along with
-        possible applications and considerations. Other relevant circuit topics
-        are also included. Be sure to check out different articles as you may
-        end up learning something you didn't before!
-      </p>
+
+      <div class="homenav">
+        <h2>Projects</h2>
+        <div class="picH">
+          <a href="projects"><img class="homepics" src="img/homeprojects.jpg"></a>
+        </div>
+
+        <div>
+          <p>
+            Explore various projects that incoporate different circuit concepts.
+            Every project includes a parts life and step-by-step instructions
+            that anyone can follow.
+            Simulation waveforms and bench-top measurements are included to verify
+            the performance of the circuit. The circuits are initially tested on a
+            bread-board, and then some are built on a perf-board or
+            designed on a PCB. Insight is given for the process of PCB design.
+            Each project is a great way to experience how real circuits perform.
+          </p>
+        </div>
+      </div>
+
+      <div class="homenav">
+        <h2>Resources</h2>
+        <div class="picH">
+          <a href="resources"><img class="homepics" src="img/homeresources.JPG"></a>
+        </div>
+
+        <div>
+          <p>
+            Learn about the different resources avaible when it comes to circuits.
+            Here i discuss what types of simulators to use and direct you to
+            helpful 3rd party websites.
+          </p>
+        </div>
+      </div>
+
 
     </div>
 
