--- a/index.html
+++ b/index.html
@@ -1,26 +1,34 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="css/test.css"/>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" type="text/css" href="css/main.css"/>
 </head>
 
 <body>
+
   <div id="wrap">
+
+    <input type="checkbox" id="menuToggle">
+    <label for="menuToggle" class="menu-icon">&#9776;</label>
 
     <div id="header">
       <div id="logo">
         <a href="css/.."><img id="title" src="img/title.PNG" alt="Designing Circuits"></a>
       </div>
-      <ul id="menu">
-        <li><a class="active" href="css/..">Home</a></li>
-        <li><a href="circuits">Circuits</a></li>
-        <li><a href="projects">Projects</a></li>
-        <li><a href="resources">Resources</a></li>
-        <li><a href="about">About</a></li>
-        <li><a href="terms">Terms</a></li>
-      </ul>
+
+      <div class="nav">
+        <ul id="menu">
+          <li><a class="active" href="css/..">Home</a></li>
+          <li><a href="circuits">Circuits</a></li>
+          <li><a href="projects">Projects</a></li>
+          <li><a href="resources">Resources</a></li>
+          <li><a href="about">About</a></li>
+          <li><a href="terms">Terms</a></li>
+        </ul>
+      </div>
+
     </div>
 
     <div id="page">
