--- a/index.html
+++ b/index.html
@@ -10,14 +10,18 @@
 
   <div id="wrap">
 
-    <input type="checkbox" id="menuToggle">
-    <label for="menuToggle" class="menu-icon">&#9776;</label>
+
 
     <div id="header">
       <div id="logo">
         <a href="css/.."><img id="title" src="img/title.PNG" alt="Designing Circuits"></a>
       </div>
 
+      <div id="menubox">
+        <label for="menuToggle" class="menu-icon">&#9776;</label>
+      </div>
+
+      <input type="checkbox" id="menuToggle">
       <div class="nav">
         <ul id="menu">
           <li><a class="active" href="css/..">Home</a></li>
