--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" type="text/css" href="css/main.css"/>
+<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css"/>
+
 </head>
 
 <body>
 
   <div id="wrap">
-
-
 
     <div id="header">
       <div id="logo">
@@ -18,7 +18,9 @@
       </div>
 
       <div id="menubox">
-        <label for="menuToggle" class="menu-icon">&#9776;</label>
+        <label for="menuToggle" class="menu-icon">
+          <i class="fa fa-bars" aria-hidden="true"></i>
+        </label>
       </div>
 
       <input type="checkbox" id="menuToggle">
