--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
       <input type="checkbox" id="menuToggle">
       <div class="nav">
         <ul id="menu">
-          <li><a class="active" href="css/..">Home</a></li>
-          <li><a href="circuits">Circuits</a></li>
-          <li><a href="projects">Projects</a></li>
-          <li><a href="resources">Resources</a></li>
-          <li><a href="about">About</a></li>
-          <li><a href="terms">Terms</a></li>
+          <li><a class="active" href="css/.."><i class="fa fa-home fa-fw" aria-hidden="true"></i>&nbsp; Home</a></li>
+          <li><a href="circuits"><i class="fa fa-microchip fa-fw" aria-hidden="true"></i>&nbsp; Circuits</a></li>
+          <li><a href="projects"><i class="fa fa-plug fa-fw" aria-hidden="true"></i>&nbsp; Projects</a></li>
+          <li><a href="resources"><i class="fa fa-book fa-fw" aria-hidden="true"></i>&nbsp; Resources</a></li>
+          <li><a href="about"><i class="fa fa-info-circle fa-fw" aria-hidden="true"></i>&nbsp; About</a></li>
+          <li><a href="terms"><i class="fa fa-gavel fa-fw" aria-hidden="true"></i>&nbsp; Terms</a></li>
         </ul>
       </div>
 
