--- a/index.html
+++ b/index.html
@@ -13,17 +13,22 @@
   <div id="wrap">
 
     <div id="header">
-      <div id="logo">
-        <a href="css/.."><img id="title" src="img/title.PNG" alt="Designing Circuits"></a>
-      </div>
-
-      <div id="menubox">
-        <label for="menuToggle" class="menu-icon">
-          <i class="fa fa-bars" aria-hidden="true"></i>
-        </label>
-      </div>
 
       <input type="checkbox" id="menuToggle">
+
+      <div id="top">
+        <div id="logo">
+          <a href="css/.."><img id="title" src="img/title.PNG" alt="Designing Circuits"></a>
+        </div>
+
+        <div id="menubox">
+          <label for="menuToggle" class="menu-icon">
+            <i class="fa fa-bars" aria-hidden="true"></i>
+          </label>
+        </div>
+
+      </div>
+
       <div class="nav">
         <ul id="menu">
           <li><a class="active" href="css/.."><i class="fa fa-home fa-fw" aria-hidden="true"></i>&nbsp; Home</a></li>
