--- a/index.html
+++ b/index.html
@@ -14,31 +14,31 @@
 
     <div id="header">
 
-      <input type="checkbox" id="menuToggle">
+        <input type="checkbox" id="menuToggle">
 
-      <div id="top">
-        <div id="logo">
-          <a href="css/.."><img id="title" src="img/title.PNG" alt="Designing Circuits"></a>
+        <div id="top">
+          <div id="logo">
+            <a href="css/.."><img id="title" src="img/title.PNG" alt="Designing Circuits"></a>
+          </div>
+
+          <div id="menubox">
+            <label for="menuToggle" class="menu-icon">
+              <i class="fa fa-bars" aria-hidden="true"></i>
+            </label>
+          </div>
+
+        </div>
+        <div class="nav">
+          <ul id="menu">
+            <li><a class="active" href="css/.."><i class="fa fa-home fa-fw n" aria-hidden="true"></i> Home</a></li>
+            <li><a href="circuits"><i class="fa fa-microchip fa-fw n" aria-hidden="true"></i> Circuits</a></li>
+            <li><a href="projects"><i class="fa fa-plug fa-fw n" aria-hidden="true"></i> Projects</a></li>
+            <li><a href="resources"><i class="fa fa-book fa-fw n" aria-hidden="true"></i> Resources</a></li>
+            <li><a href="terms"><i class="fa fa-gavel fa-fw n" aria-hidden="true"></i> Terms</a></li>
+            <li><a href="about"><i class="fa fa-info-circle fa-fw n" aria-hidden="true"></i> About</a></li>
+          </ul>
         </div>
 
-        <div id="menubox">
-          <label for="menuToggle" class="menu-icon">
-            <i class="fa fa-bars" aria-hidden="true"></i>
-          </label>
-        </div>
-
-      </div>
-
-      <div class="nav">
-        <ul id="menu">
-          <li><a class="active" href="css/.."><i class="fa fa-home fa-fw" aria-hidden="true"></i>&nbsp; Home</a></li>
-          <li><a href="circuits"><i class="fa fa-microchip fa-fw" aria-hidden="true"></i>&nbsp; Circuits</a></li>
-          <li><a href="projects"><i class="fa fa-plug fa-fw" aria-hidden="true"></i>&nbsp; Projects</a></li>
-          <li><a href="resources"><i class="fa fa-book fa-fw" aria-hidden="true"></i>&nbsp; Resources</a></li>
-          <li><a href="about"><i class="fa fa-info-circle fa-fw" aria-hidden="true"></i>&nbsp; About</a></li>
-          <li><a href="terms"><i class="fa fa-gavel fa-fw" aria-hidden="true"></i>&nbsp; Terms</a></li>
-        </ul>
-      </div>
 
     </div>
 
@@ -118,8 +118,8 @@
       <a href="circuits">Circuits</a> |
       <a href="projects">Projects</a> |
       <a href="resources">Resources</a> |
-      <a href="about">About</a> |
-      <a href="terms">Terms</a>
+      <a href="terms">Terms</a> |
+      <a href="about">About</a>
     </div>
   </div>
 
